Edited wiki page through web user interface.

--- a/wiki/WikiTop.wiki
+++ b/wiki/WikiTop.wiki
@@ -2,7 +2,8 @@
 
 This is the top level for the DIY Keyboard Wiki.  Anyone interested in building their own keyboard is welcome to contribute code and/or information.  
 
-= Keyboard Subsystems =
+== Keyboard Subsystems: ==
+ *== KeyLayout
  *== KeyboardScannerCircuit ==
  *== KeybedAction ==
  *== SoundModule ==
