--- a/wiki/JankoLayout.wiki
+++ b/wiki/JankoLayout.wiki
@@ -1,5 +1,9 @@
 #summary Information about the Janko Keyboard Layout
 
-Currently the best explanation of the Janko key layout is at Noel Cragg's Page.
+Currently the best explanation of the Janko key layout is at Noel Cragg's Page:
 [http://www.red-bean.com/~noel/uniform-keyboard/ The Uniform Keyboard]
 
+Paul Vandervoort plays professionally on a Janko MIDI controller he build himself.  He is in the process of developing his Janko MIDI controller into a commercial product.
+
+A Japanese Company makes the Chromatone, a Janko Layout Synth:
+http://www.chroma.jp/shop/
