Edited wiki page through web user interface.

--- a/wiki/JankoLayout.wiki
+++ b/wiki/JankoLayout.wiki
@@ -7,3 +7,7 @@ Paul Vandervoort plays professionally on a Janko MIDI controller he build himsel
 
 A Japanese Company makes the Chromatone, a Janko Layout Synth:
 http://www.chroma.jp/shop/
+
+Yukihiro Kitazaki jamming on a Chromatone and a bass guitar simultaneously:
+http://www.youtube.com/watch?v=Vd8AkgtN0hY
+http://www.youtube.com/watch?v=mTRtCgaAEDE
