Edited wiki page through web user interface.

--- a/wiki/JankoLayout.wiki
+++ b/wiki/JankoLayout.wiki
@@ -1,5 +1,7 @@
 #summary Information about the Janko Keyboard Layout
 
+WARNING: MOVING TO SOURCEFORGE!!!
+
 Currently the best explanation of the Janko key layout is at Noel Cragg's Page:
 [http://www.red-bean.com/~noel/uniform-keyboard/ The Uniform Keyboard]
 
