Edited wiki page through web user interface.

--- a/wiki/RubberMembraneKeyswitches.wiki
+++ b/wiki/RubberMembraneKeyswitches.wiki
@@ -1,4 +1,4 @@
-#summary Information about Making or Buying Rubber Membrane Keyswitches
+#summary Information about Making or Buying Rubber Membrane Keyswitches MOVED
 
 Results in an industrial search engine for rubber membrane switch manufacturers:
 http://www.thomasnet.com/nsearch.htmlcov=NA&what=Switches%3A+Rubber%2C+Conductive&heading=82010547&navsec=prodsearch
