Edited wiki page through web user interface.

--- a/wiki/WikiTop.wiki
+++ b/wiki/WikiTop.wiki
@@ -1,4 +1,4 @@
-#summary Top level page of the DIY Keyboard Wiki
+#summary Top level page of the DIY Keyboard Wiki MOVED
 
 WARNING: MIGRATING TO SOURCEFORGE
 
