--- a/wiki/JankoLayout.wiki
+++ b/wiki/JankoLayout.wiki
@@ -1,4 +1,4 @@
-#summary Information about the Janko Keyboard Layout
+#summary Information about the Janko Keyboard Layout MOVED
 
 WARNING: MOVING TO SOURCEFORGE!!!
 
