Edited wiki page through web user interface.

--- a/wiki/ConductingSpringSwitch.wiki
+++ b/wiki/ConductingSpringSwitch.wiki
@@ -1,4 +1,3 @@
-#summary Information about the conducting-spring keyswitch
+#summary Information about the conducting-spring keyswitch MOVED
 
 Some Fatar Keybeds have used a conducting spring that can come into contact with two conducting rails as a keyswitch.  Since the spring is used as an electrical contact, it is advantageous to gold-plate it to prevent corrosion.
-
