Edited wiki page through web user interface.

--- a/wiki/KeyLayout.wiki
+++ b/wiki/KeyLayout.wiki
@@ -1,4 +1,4 @@
-#summary Different Options for Key Layout
+#summary Different Options for Key Layout MOVED
 
 The actual arrangement of the keys can have a significant impact on how difficult it is to learn to play a keyboard instrument, and what musical styles are possible even for those skilled at the instrument.
 
